# NA-templates

./: CMakeLists.txt
20-type-template/: 23-optional.cpp  implementation.h
30-traits/: 32-interesting.cpp  implementation.h
40-algos-impl/: 41-find-if.cpp  42-inner-product.cpp  43-vector-erase.cpp  inner_product.h  vector_erase.h
50-sfinae/: 53-wtf_shit.cpp  implementation-void_t.h  implementation.h
70-expr-tpl/: 71-bounded_int.cpp  72-vector.cpp  CMakeLists.txt  bounded_int.h  vector.h
